--- a/css/styles.css
+++ b/css/styles.css
@@ -28,34 +28,40 @@ body {
     color: #ffffff;
 }
 
+.column-1 h3 {
+    color: black;
+    text-align: center;
+}
+
 #section-2 {
     background-color: #509ea0;
     text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    /* padding-top: 50px;
+    padding-bottom: 50px; */
 }
 
 .column-2 {
     width: 50%;
     float: left;
-    padding: 40px;
+    /* padding: 40px; */
 }
 
 #section-3 {
-    padding: 0 7%;
+    /* padding: 0 7%; */
 }
 
 .column-4 {
     width: 25%;
     float: left;
+    /* padding: 40px; */
 }
 
-.column-4 h4 {
+.column-4 p {
     color: white;
 }
 
 #section-4 {
-    background-color: grey;
+    background-color: gray;
 }
 
 
@@ -79,9 +85,46 @@ body {
 
 #map {
     width: 100%;
-    height: 450px;
+    height: 350px;
     border: 0;
     /* height="450" style="border:0;" */
+}
+
+#section-5 {
+    /*background-color da color de fondo a la caja (div)*/
+    background-color: black;
+    text-align: center;
+}
+
+
+/*La clase gallery definirá los estilos de las 
+imágenes de la sección 1 (section-1)*/
+
+.gallery {
+    /*como hay 3 imágenes por fila he de dividir 
+    la horizontal en 3 partes => width: 33.33%;*/
+    width: 33.33%;
+    float: left;
+}
+
+.gallery img {
+    width: 100%;
+}
+
+
+/*Reglas auxiliares*/
+
+.relleno-lateral {
+    padding-left: 9%;
+    padding-right: 9%;
+}
+
+.relleno-columnas {
+    padding-right: 20px;
+}
+
+#section-1 img {
+    padding: 50px;
 }
 
 @media screen and (max-width: 600px) {
@@ -98,10 +141,17 @@ body {
     .column-2 {
         width: 100%;
     }
-    #section-2,
-    #section-3,
-    .column-2 {
-        padding-left: 5px;
-        padding-right: 5px;
+    .relleno-lateral {
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+    .column-4 {
+        width: 50%;
+    }
+    .relleno-columnas {
+        padding-right: 0px;
+    }
+    .gallery {
+        width: 50%;
     }
 }
